custom-apps/clickhouse-operator/clusters/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
  name: clickhouse-ingress
  namespace: clickhouse
spec:
  ingressClassName: traefik
  rules:
  - host: clickhouse.k8s.local
    http:
      paths:
      - backend:
          service:
            name: clickhouse-clickhouse-cluster
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - clickhouse.k8s.local
    secretName: clickhouse-cert
